--- a/style/tickets.css
+++ b/style/tickets.css
@@ -7,7 +7,6 @@
     height: 743px;
   }
   #tickets .content .container {
-    border: 2px solid red;
     display: flex;
     justify-content: space-between;
     margin-top: 75px;
@@ -53,6 +52,23 @@
   #tickets .content .container .item .ticket-type ul li input {
     width: 17px;
     height: 17px;
+    position: relative;
+    appearance: none;
+  }
+  #tickets .content .container .item .ticket-type ul li input[type=radio] {
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
+    border: 2px solid black;
+    transition: 0.2s all linear;
+    background: white;
+  }
+  #tickets .content .container .item .ticket-type ul li input[type=radio]:checked {
+    width: 17px;
+    height: 17px;
+    background: black;
+    outline: 3px solid white;
+    outline-offset: -5px;
   }
   #tickets .content .container .item .ticket-type ul li label {
     position: relative;
