--- a/style/tickets.scss
+++ b/style/tickets.scss
@@ -7,7 +7,6 @@
       height: 743px;
 
       .container {
-        border: 2px solid red;
         display: flex;
         justify-content: space-between;
         margin-top: 75px;
@@ -45,18 +44,32 @@
               display: flex;
               justify-content: space-between;
               flex-direction: column;
-
               li {
                 position: relative;
                 width: 230px;
                 height: 26px;
                 color: black;
-
                 input {
                   width: 17px;
                   height: 17px;
+                  position: relative;
+                  appearance: none;
                 }
-
+                input[type="radio"] {
+                  width: 17px;
+                  height: 17px;
+                  border-radius: 50%;
+                  border: 2px solid black;
+                  transition: 0.2s all linear;
+                  background: white;
+                }
+                input[type="radio"]:checked {
+                  width: 17px;
+                  height: 17px;
+                  background: black;
+                  outline: 3px solid white;
+                  outline-offset: -5px;
+                }
                 label {
                   position: relative;
                   left: 23px;
